--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <!-- Required meta tags always come first -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta http-equiv="x-ua-compatible" content="ie=edge">
+ 
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css
+    ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
+   
+    <link rel="stylesheet" href="css/styles.css">
+
+    <title>Gazette</title>
+
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row blue">
+                <div class="col-4 rowone yellow">
+                    <p>today's sponsors</p>
+                </div>
+                <div class="col-4 rowtwo red">
+                    <hp> Newspaper title</h1>
+                </div>
+                <div class="col-4 rowthree green">
+                    <p>weather forecast</p>
+                </div>
+                <h2>HEADER</h2>
+            </div>  
+        </div>
+    </header>
+
+    <nav>
+        <div class="container">
+            <div class="row">    
+                <div class="col-4 blue">
+                    <p>issue number</p>
+                </div>
+                <div class="col-4 yellow">
+                    <p>date</p>
+                </div>
+                <div class="col-4 red">
+                    <p>price</p>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="parent-container d-flex">
+        <div class="container">
+            <div class="row">
+                <div class="col-7 turquoise">
+                    <h2>title</h2>
+                    <div class="row no-gutters">
+                        <div class="col-4 purple">
+                            <p>content - text</p>
+                        </div>
+                        <div class="col-8 red">
+                            <div class="d-flex flex-column">
+                                <div class="col-12 rowfour p-2 grey">
+                                    <p>image</p>
+                                </div>
+
+                                <div class="col-12 rowfive p-2">
+                                    <div class="row no-gutters">
+                                        <div class="col-6 orange">
+                                            <p>content - text</p> 
+                                        </div>
+                                        <div class="col-6 yellow">
+                                            <p>content - text</p>
+                                        </div>
+                                    </div>  
+                                </div>
+                        </div>       
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-4 greenyellow">
+                            <p>content - text</p>
+                        </div>
+                        <div class="col-8 red">
+                            <div class="d-flex flex-column">
+                                <div class="col-12 rowfour p-2 grey">
+                                    <p>image</p>
+                                </div>
+
+                                <div class="col-12 rowfive p-2">
+                                    <div class="row no-gutters">
+                                        <div class="col-6 orange">
+                                            <p>content - text</p> 
+                                        </div>
+                                        <div class="col-6 yellow">
+                                            <p>content - text</p>
+                                        </div>
+                                    </div>  
+                                </div>
+                        </div>       
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-5 blue">
+                    <div class="d-flex flex-row">
+                    <div class="col-6 green">
+                            <p>content - text</p>
+                        </div>
+                        <div class="col-6 bisque">
+                            <p>content - text</p>
+                        </div>
+                    </div>
+                    <div class="col-12 yellow">
+                        <p>image</p>
+                    </div>
+                </div>
+            </div>
+
+            
+        </div>
+    </div>
 </body>
 </html>
