--- a/index.html
+++ b/index.html
@@ -26,31 +26,32 @@
     <header>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-2 align-self-center text-center navborder">
-                    <h5>WEATHER INDICATIONS.</h5>
+                <div class="col-1 align-self-end text-center double-border header-info">
+                    <h6>WEATHER INDICATIONS.</h5>
                     <p>Fair and colder tonight. Thursday fair;<br>brisk to north winds</p>
                 </div>
-                <div class="col align-self-center text-center">
+                <div class="col align-self-start text-center">
                     <h1> The Evening Gazette</h1>
                 </div>
-                <div class="col-2 align-self-center text-center">
-                    <h4>LAST EDITION</h5>
+                <div class="col-1 align-self-end text-center double-border header-info">
+                    <h6>LAST EDITION.</h6>
+                    <p>Including <br><strong>Star's Sunday Magazine</strong><br>and<br><strong>Colored Comic Section.</strong></p>
                 </div>
             </div>  
         </div>
     </header>
 
     <!-- Navigation :contains issue number, date and price -->
-    <nav>
+    <nav class="double-border-nav">
         <div class="container-fluid">
             <div class="row ">    
-                <div class="col-4 blue">
+                <div class="col-2">
                     <p>Number 2023.</p>
                 </div>
-                <div class="col-4 text-center yellow">
+                <div class="col-8 text-center">
                     <p>WASHINGTON, WEDNESDAY, JANUARY 22, 1902.</p>
                 </div>
-                <div class="col-4 text-right red">
+                <div class="col-2 text-right">
                     <p>Price One Cent.</p>
                 </div>
             </div>
