Validate, fixed errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-1 align-self-end text-center double-border header-info">
-                    <h6>WEATHER INDICATIONS.</h5>
+                    <h6>WEATHER INDICATIONS.</h6>
                     <p>Fair and colder tonight. Thursday fair;<br>brisk to north winds</p>
                 </div>
                 <div class="col align-self-end text-center">
@@ -80,7 +80,7 @@
                             <div class="row">
                                 <!-- first column - image -->
                                 <div class="col-12 bisque">
-                                    <img class="img-fluid" src="https://the-public-domain-review.imgix.net/collections/a-vision-of-isolating-technology-from-1906/28555158786_9c6c06d11b_b.jpg?w=1024" height="300px" width="300px"> 
+                                    <img class="img-fluid" src="https://the-public-domain-review.imgix.net/collections/a-vision-of-isolating-technology-from-1906/28555158786_9c6c06d11b_b.jpg?w=1024" height="300" width="300" alt="Forecasts for 1907 drawing"> 
                                 </div>
                                 <!-- second column - text -->
                                 <div class="col-12 turquoise">
@@ -100,7 +100,7 @@
 
                 <!-- This is the forth column -->
                 <div class="col-2 red">
-                    <img src="https://the-public-domain-review.imgix.net/collections/cartoon-portraits-of-leading-19th-century-figures-1873/7802388966_232d539425_o.jpg?w=600" width="auto" height="350px">
+                    <img src="https://the-public-domain-review.imgix.net/collections/cartoon-portraits-of-leading-19th-century-figures-1873/7802388966_232d539425_o.jpg?w=600" width="300" height="350" alt="Cartoon drawing">
                 </div>
 
                 <!-- This is the fifth column -->
